# libfeal

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  COPYING  LICENSE  LICENSE.LGPL21  LICENSE.md  NOTICE  README.md
.github/workflows/: cmake.yml
doc/: LICENSE-DOC.CC-BY4  NOTICE-DOC
examples/: CMakeLists.txt  LICENSE
examples/actors_and_timers/: ActorA.cpp  ActorA.h  ActorB.cpp  ActorB.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_actorstimers.cpp  main_helloworld.cpp
examples/descmon_curl/: ActorA.cpp  ActorA.h  CMakeLists.txt  main_curlmulti.cpp
examples/descmon_inotify/: ActorA.cpp  ActorA.h  CMakeLists.txt  main_inotify.cpp
examples/filedescmon_inotify/: ActorA.cpp  ActorA.h  CMakeLists.txt
examples/filedirmon/: ActorA.cpp  ActorA.h  CMakeLists.txt  main_filedirmon.cpp
examples/fork/: main_fork.cpp
examples/fork_ipc/: ActorA.cpp  ActorA.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_fork.cpp
examples/helloworld/: ActorA.cpp  ActorA.h  ActorB.cpp  ActorB.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
examples/pipe_fifo/: CMakeLists.txt  fiforeader.cpp  fiforeader.h  fifowriter.cpp  fifowriter.h  main_fiforeader.cpp  main_fifowriter.cpp
examples/promise/: ActorA.cpp  ActorA.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_promise.cpp
examples/promise_curl/: ActorA.cpp  ActorA.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_promise.cpp
examples/sigchld_fork/: ActorA.cpp  ActorA.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_fork.cpp
examples/signal/: ActorA.cpp  ActorA.h  ActorsManager.cpp  ActorsManager.h  CMakeLists.txt  main_signal.cpp
examples/tcp_echo_clientserver/: CMakeLists.txt  client.cpp  client.h  client6.cpp  client6.h  clienthandler.cpp  clienthandler.h  main_client.cpp  main_client6.cpp  main_server.cpp  main_server6.cpp  server.cpp  server.h  server6.cpp  server6.h
examples/tls_echo_clientserver_openssl/: CMakeLists.txt  client.cpp  client.h  client6.cpp  client6.h  clienthandler.cpp  clienthandler.h  main_client.cpp  main_client6.cpp  main_server.cpp  main_server6.cpp  server.cpp  server.crt  server.h  server.key  server6.cpp  server6.h
examples/udp_echo_clientserver/: CMakeLists.txt  client.cpp  client.h  client6.cpp  client6.h  main_client.cpp  main_client6.cpp  main_server.cpp  main_server6.cpp  server.cpp  server.h  server6.cpp  server6.h
examples/und_echo_clientserver/: CMakeLists.txt  clientund.cpp  clientund.h  main_clientund.cpp  main_serverund.cpp  serverund.cpp  serverund.h
examples/uns_echo_clientserver/: CMakeLists.txt  clientuns.cpp  clientuns.h  main_clientuns.cpp  main_serveruns.cpp  serveruns.cpp  serveruns.h
examples/uns_echo_clientserver_abstract/: CMakeLists.txt  clientuns.cpp  clientuns.h  main_clientuns.cpp  main_serveruns.cpp  serveruns.cpp  serveruns.h
helpers/: buildwingithub.bat  buildwingithub.ps1  exlinux.sh  exunix.sh  exwingithub.bat  exwingithub.ps1  runclang.sh
include/: .clang-format  feal.h
include/Feal/: FealActor.h  FealEvent.h  FealEventBus.h
include/internal/: FealActor.h  FealActorVector.h  FealBaseSignal.h  FealBaseSignal_posix.h  FealBaseSignal_win.h  FealBaseStream.h  FealBaseStream_epoll.h  FealBaseStream_iocp.h  FealBaseStream_kqueue.h  FealBaseStream_poll.h  FealBaseStream_win.h  FealCommon.h  FealCommon_posix.h  FealCommon_win.h  FealDatagram.h  FealDatagram_posix.h  FealDatagram_winsock.h  FealDescMon.h  FealEvent.h  FealEventBus.h  FealFifoReader.h  FealFileDescMon.h  FealFileDirMon.h  FealPipeReader.h  FealReader.h  FealSignal.h  FealStream.h  FealStream_epoll.h  FealStream_iocp.h  FealStream_kqueue.h  FealStream_posix.h  FealStream_winsock.h  FealTCPStream.h  FealTCPStream_posix.h  FealTCPStream_winsock.h  FealTimer.h  FealTimers.h  FealTool.h
src/: CMakeLists.txt  FealActor.cpp  FealActorVector.cpp  FealBaseSignal.cpp  FealBaseStream.cpp  FealBaseStream_epoll.cpp  FealBaseStream_kqueue.cpp  FealBaseStream_win.cpp  FealCommon.cpp  FealCommon_posix.cpp  FealCommon_win.cpp  FealDatagram.cpp  FealDescMon.cpp  FealEvent.cpp  FealEventBus.cpp  FealFileDescMon.cpp  FealFileDirMon.cpp  FealReader.cpp  FealSignal.cpp  FealStream.cpp  FealStream_epoll.cpp  FealTCPStream.cpp  FealTCPStream_posix.cpp  FealTimer.cpp
test/: CMakeLists.txt
